Fix scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,7 @@ button a{
         display: block;
         width: 100%;
         margin: 0;
-        height: auto;
+        height: fit-content;
     }
     #diffDrop{
         width:100%;
